@@ -1,3 +1,11 @@
+# This file is used to maintain the libtool version of librgxg.
+#
+# See the libtool manual to understand the meaning of the fields.
+#
+# Note: The version is only changed if needed just before a public release
+#       (i.e. a tarball release announced on the rgxg-announce mailing list).
+#
+
 m4_define([_LIB_CURRENT], [0])
 m4_define([_LIB_REVISION], [0])
 m4_define([_LIB_AGE], [0])
